--- a/meson.build
+++ b/meson.build
@@ -10,3 +10,9 @@ test = executable('cwin_example',
                    'example.c',
                    link_with : cwin_lib
 )
+
+inc = include_directories(".")
+
+cwin_dep = declare_dependency(link_with : cwin_lib,
+                              include_directories : inc
+)
