win32 vulkan support

--- a/meson.build
+++ b/meson.build
@@ -1,9 +1,13 @@
 project('cwin', 'c')
 
+vulkan = dependency('vulkan')
+
 cwin_lib = static_library('cwin',
                           'cwin.c',
                           c_args : ['-DCWIN_BACKEND_WIN32',
-                                    '-DUNICODE'],
+                                    '-DUNICODE',
+                                    '-DCWIN_VULKAN'],
+                          dependencies : [vulkan],
 )
 
 test = executable('cwin_example',
@@ -14,5 +18,5 @@ test = executable('cwin_example',
 inc = include_directories('.')
 
 cwin_dep = declare_dependency(link_with : cwin_lib,
-                              include_directories : inc
+                              include_directories : inc,
 )
